syntax = "proto2";

package netlist;

enum NodeType {
    NODE_TYPE_UNSPECIFIED = 0;
  }

message Node {
  optional string name = 1;
  optional int32 uid = 2;

  optional Net net = 3;
}

message Net {
  optional string name = 1;
  optional int32 uid = 2;

  message Connection {
    optional int32 number = 1;
    optional string  name = 2;
    optional NodeType type = 3 [default = NODE_TYPE_UNSPECIFIED];
  }

  repeated Connection connections = 3;
}

message NodeList {
  repeated Node nodes = 1;
}


message NetList {
  repeated Net nets = 1;
}
